--- a/.github/workflows/dynamodb-setup.yml
+++ b/.github/workflows/dynamodb-setup.yml
@@ -17,5 +17,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: dummy
           AWS_DEFAULT_REGION: ap-northeast-1
         run: |
-          aws dynamodb list-tables --endpoint-url http://localhost:8002
-          aws dynamodb list-tables --endpoint-url http://localhost:8000
+          echo "aws cli version check"
+          aws --version
