--- a/.github/workflows/dynamodb-setup.yml
+++ b/.github/workflows/dynamodb-setup.yml
@@ -18,10 +18,11 @@ jobs:
           rm /tmp/awscliv2.zip
           /tmp/aws/install --update
           rm -rf /tmp/aws/
+          aws --version
       - name: Setup DynamoDB Local
         env:
           AWS_ACCESS_KEY_ID: dummy
           AWS_SECRET_ACCESS_KEY: dummy
           AWS_DEFAULT_REGION: ap-northeast-1
         run: |
-          aws --version
+          aws dynamodb list-tables --endpoint-url http://localhost:8002
