--- a/.github/workflows/dynamodb-setup.yml
+++ b/.github/workflows/dynamodb-setup.yml
@@ -25,4 +25,6 @@ jobs:
           AWS_SECRET_ACCESS_KEY: dummy
           AWS_DEFAULT_REGION: ap-northeast-1
         run: |
+          docker ps
+          aws dynamodb list-tables --endpoint-url http://localhost:8000
           aws dynamodb list-tables --endpoint-url http://localhost:8002
