--- a/.github/workflows/dynamodb-setup.yml
+++ b/.github/workflows/dynamodb-setup.yml
@@ -26,5 +26,10 @@ jobs:
           AWS_ACCESS_KEY_ID: dummy
           AWS_SECRET_ACCESS_KEY: dummy
           AWS_DEFAULT_REGION: ap-northeast-1
+        uses: actions/checkout@v3
         run: |
           aws dynamodb list-tables --endpoint-url http://localhost:8002
+          aws dynamodb list-tables --endpoint-url http://localhost:8000
+          aws dynamodb list-tables --endpoint-url http://dynamodb:8002
+          aws dynamodb list-tables --endpoint-url http://dynamodb:8000
+          echo finish
