add uses action

--- a/.github/workflows/dynamodb-setup.yml
+++ b/.github/workflows/dynamodb-setup.yml
@@ -11,8 +11,6 @@ jobs:
         ports:
           - 8002:8000
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
       - name: Install AWS CLI v2
         run: |
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o /tmp/awscliv2.zip
@@ -32,4 +30,4 @@ jobs:
           aws dynamodb list-tables --endpoint-url http://localhost:8000
           aws dynamodb list-tables --endpoint-url http://dynamodb:8002
           aws dynamodb list-tables --endpoint-url http://dynamodb:8000
-          echo finish
+          echo "finish"
