--- a/.github/workflows/dynamodb-setup.yml
+++ b/.github/workflows/dynamodb-setup.yml
@@ -1,6 +1,6 @@
 name: Dynamodb setup demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push, pull_request]
+on: [pull_request]
 jobs:
   Dynamodb-setup-actions:
     runs-on: ubuntu-20.04
