--- a/.github/workflows/dynamodemo.yml
+++ b/.github/workflows/dynamodemo.yml
@@ -6,17 +6,15 @@ on: [push, pull_request]
 jobs:
   sample-job-on-the-runner-machine:
     runs-on: ubuntu-latest
+    services:
+      dynamodb:
+        image: amazon/dynamodb-local:latest
+        ports:
+          - 8000:8000
     env:
       AWS_ACCESS_KEY_ID: DUMMY_AWS_ACCESS_KEY_ID
       AWS_SECRET_ACCESS_KEY: DUMMY_AWS_SECRET_ACCESS_KEY
       AWS_DEFAULT_REGION: ap-northeast-1
     steps:
       - uses: actions/checkout@v3
-      - run: aws dynamodb create-table --cli-input-json file://users-table.json --endpoint-url http://localhost:8000
-      - run: aws dynamodb describe-table --table-name users-table --endpoint-url http://localhost:8000
-    # 実際にDynamoDB Localを設定しているところはここ
-    services:
-      dynamodb:
-        image: amazon/dynamodb-local:latest
-        ports:
-          - 8000:8000
+      - run: aws dynamodb list-tables --endpoint-url http://localhost:8000
