--- a/.github/workflows/dynamodemo.yml
+++ b/.github/workflows/dynamodemo.yml
@@ -16,5 +16,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: DUMMY_AWS_SECRET_ACCESS_KEY
       AWS_DEFAULT_REGION: ap-northeast-1
     steps:
-      - uses: actions/checkout@v3
-      - run: aws dynamodb list-tables --endpoint-url http://localhost:8000
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: dynamodb setup
+        run: aws dynamodb list-tables --endpoint-url http://localhost:8000
