--- a/.github/workflows/dynamodemo.yml
+++ b/.github/workflows/dynamodemo.yml
@@ -5,18 +5,19 @@ on: [push, pull_request]
 
 jobs:
   sample-job-on-the-runner-machine:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    container: node:16
     services:
       dynamodb:
         image: amazon/dynamodb-local:latest
         ports:
           - 8000:8000
-    env:
-      AWS_ACCESS_KEY_ID: DUMMY_AWS_ACCESS_KEY_ID
-      AWS_SECRET_ACCESS_KEY: DUMMY_AWS_SECRET_ACCESS_KEY
-      AWS_DEFAULT_REGION: ap-northeast-1
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: dynamodb setup
         run: aws dynamodb list-tables --endpoint-url http://localhost:8000
+        env:
+          AWS_ACCESS_KEY_ID: DUMMY_AWS_ACCESS_KEY_ID
+          AWS_SECRET_ACCESS_KEY: DUMMY_AWS_SECRET_ACCESS_KEY
+          AWS_DEFAULT_REGION: ap-northeast-1
