--- a/.github/workflows/dynamodemo.yml
+++ b/.github/workflows/dynamodemo.yml
@@ -21,3 +21,7 @@ jobs:
         uses: actions/checkout@v3
       - name: dynamodb setup
         run: aws dynamodb list-tables --endpoint-url http://localhost:8000
+        env:
+          AWS_ACCESS_KEY_ID: DUMMY_AWS_ACCESS_KEY_ID
+          AWS_SECRET_ACCESS_KEY: DUMMY_AWS_SECRET_ACCESS_KEY
+          AWS_DEFAULT_REGION: ap-northeast-1
