--- a/.github/workflows/dynamodemo.yml
+++ b/.github/workflows/dynamodemo.yml
@@ -11,7 +11,7 @@ jobs:
       dynamodb:
         image: amazon/dynamodb-local:latest
         ports:
-          - 8000:8000
+          - 8002:8000
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -22,13 +22,12 @@ jobs:
           rm /tmp/awscliv2.zip
           /tmp/aws/install --update
           rm -rf /tmp/aws/
-          aws --version
-      - name: dynamodb setup
+      - name: Setup dynamodb local
         run: |
-          aws dynamodb list-tables --endpoint-url http://dynamodb:8000
-          aws dynamodb create-table --cli-input-json file://dynamodblocal/users-table.json --endpoint-url http://dynamodb:8000
-          aws dynamodb describe-table --table-name users-table --endpoint-url http://dynamodb:8000
-          aws dynamodb list-tables --endpoint-url http://dynamodb:8000
+          aws dynamodb list-tables --endpoint-url http://dynamodb:8002
+          aws dynamodb create-table --cli-input-json file://dynamodblocal/users-table.json --endpoint-url http://dynamodb:8002
+          aws dynamodb describe-table --table-name users-table --endpoint-url http://dynamodb:8002
+          aws dynamodb list-tables --endpoint-url http://dynamodb:8002
         env:
           AWS_ACCESS_KEY_ID: dummy
           AWS_SECRET_ACCESS_KEY: dummy
