--- a/.github/workflows/dynamodemo.yml
+++ b/.github/workflows/dynamodemo.yml
@@ -28,7 +28,7 @@ jobs:
           aws dynamodb create-table --cli-input-json file://dynamodblocal/users-table.json --endpoint-url http://dynamodb:8000
           aws dynamodb describe-table --table-name users-table --endpoint-url http://dynamodb:8000
           aws dynamodb list-tables --endpoint-url http://dynamodb:8000
-        # env:
-        #   AWS_ACCESS_KEY_ID: dummy
-        #   AWS_SECRET_ACCESS_KEY: dummy
+        env:
+          AWS_ACCESS_KEY_ID: dummy
+          AWS_SECRET_ACCESS_KEY: dummy
         #   AWS_DEFAULT_REGION: ap-northeast-1
