--- a/.github/workflows/dynamodemo.yml
+++ b/.github/workflows/dynamodemo.yml
@@ -31,4 +31,5 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: dummy
           AWS_SECRET_ACCESS_KEY: dummy
-        #   AWS_DEFAULT_REGION: ap-northeast-1
+          #   AWS_DEFAULT_REGION: ap-northeast-1
+          AWS_CONFIG_REGION: ap-northeast-1
